--- a/index.html
+++ b/index.html
@@ -102,16 +102,168 @@
                 <h1 class="section-title">Featured portofolios</h1>
 
                 <div class="grid-3">
+                    <!-- portofolio 0 -->
                     <div class="portofolio">
                         <div class="portofolio-cover">
-                            <img src="./asset/portofolios/smart-door.jpg" alt="portofolio-1">
+                            <img src="./asset/portofolios/smart-door.jpg" alt="portofolio-0">
                         </div>
 
                         <div class="portofolio-info">
                             <div class="portofolio-title">
                                 <h4>IOT Engginer</h4>
-                                <a href="/" class="portofolio-link"></a>
+                                <a href="https://github.com/REXSY06/SMARTDOOR.git" class="portofolio-link">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M6 17c2.269-9.881 11-11.667 11-11.667v-3.333l7 6.637-7 6.696v-3.333s-6.17-.171-11 5zm12 .145v2.855h-16v-12h6.598c.768-.787 1.561-1.449 2.339-2h-10.937v16h20v-6.769l-2 1.914z"/></svg>
+                                </a>
                             </div>
+
+                            <div class="portofolio-tags">
+                                <div>Research</div>
+                                <div>Experiment</div>
+                            </div>
+                            <p>Automatic door innovation that has various features and connectivity that can be connected to the internet and can be easily controlled via your mobile phone.</p>
+                        </div>
+                    </div>
+
+                    <!-- portofolio 1 -->
+                    <div class="portofolio">
+                        <div class="portofolio-cover">
+                            <img src="./asset/portofolios/portfolio-1.png" alt="portofolio-1">
+                        </div>
+
+                        <div class="portofolio-info">
+                            <div class="portofolio-title">
+                                <h4>Agency Website</h4>
+                                <a href="/" class="portofolio-link">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M6 17c2.269-9.881 11-11.667 11-11.667v-3.333l7 6.637-7 6.696v-3.333s-6.17-.171-11 5zm12 .145v2.855h-16v-12h6.598c.768-.787 1.561-1.449 2.339-2h-10.937v16h20v-6.769l-2 1.914z"/></svg>
+                                </a>
+                            </div>
+
+                            <div class="portofolio-tags">
+                                <div>React</div>
+                                <div>Tailwind</div>
+                            </div>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In aut maxime autem ratione odit quam totam facere possimus corrupti quo reiciendis iste, excepturi illum sequi? Dolores porro magni doloremque, placeat cum quisquam! Sunt reiciendis sapiente hic earum ea esse similique.</p>
+                        </div>
+                    </div>
+
+                    <!-- portofolio 2 -->
+                    <div class="portofolio">
+                        <div class="portofolio-cover">
+                            <img src="./asset/portofolios/portfolio-2.png" alt="portofolio-2">
+                        </div>
+
+                        <div class="portofolio-info">
+                            <div class="portofolio-title">
+                                <h4>Landing Page</h4>
+                                <a href="/" class="portofolio-link">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M6 17c2.269-9.881 11-11.667 11-11.667v-3.333l7 6.637-7 6.696v-3.333s-6.17-.171-11 5zm12 .145v2.855h-16v-12h6.598c.768-.787 1.561-1.449 2.339-2h-10.937v16h20v-6.769l-2 1.914z"/></svg>
+                                </a>
+                            </div>
+
+                            <div class="portofolio-tags">
+                                <div>Vue</div>
+                                <div>Contenful</div>
+                            </div>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus dolorum, debitis ex neque quos fugit ducimus labore sunt distinctio at! Hic et, alias corporis facere est laborum ea! Explicabo, sequi?</p>
+                        </div>
+                    </div>
+
+                    <!-- portofolio 3 -->
+                    <div class="portofolio">
+                        <div class="portofolio-cover">
+                            <img src="./asset/portofolios/portfolio-3.jpeg" alt="portofolio-3">
+                        </div>
+
+                        <div class="portofolio-info">
+                            <div class="portofolio-title">
+                                <h4>Dashboard Admin</h4>
+                                <a href="/" class="portofolio-link">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M6 17c2.269-9.881 11-11.667 11-11.667v-3.333l7 6.637-7 6.696v-3.333s-6.17-.171-11 5zm12 .145v2.855h-16v-12h6.598c.768-.787 1.561-1.449 2.339-2h-10.937v16h20v-6.769l-2 1.914z"/></svg>
+                                </a>
+                            </div>
+
+                            <div class="portofolio-tags">
+                                <div>React</div>
+                                <div>Materalize</div>
+                            </div>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo deserunt repudiandae error asperiores! Nesciunt placeat earum, facere nulla minus soluta alias id iure accusamus laboriosam quos quisquam consectetur iusto recusandae.</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <!-- Skill & Education -->
+
+        <section id="skills">
+            <div class="skill main-container">
+                <h3 class="pre-title">Learning path</h3>
+                <h1 class="section-title">skills & Education</h1>
+
+                <div class="skills-grid">
+                    <div class="skills-left">
+
+                        <!-- Education 1 -->
+                        <div class="education">
+                          <div class="line">
+                            <div></div>
+                          </div>  
+
+                          <div class="education-info">
+                            <h4 class="Education-title">Vocational High School 2 Temanggung</h4>
+                            <p>Computer Network Engineering</p>
+                            <h4 class="education-years">2019 - 2022</h4>
+                          </div>
+                        </div>
+
+                        <!-- Education 2 -->
+                          <div class="education">
+                            <div class="line">
+                              <div></div>
+                            </div>  
+  
+                            <div class="education-info">
+                              <h4 class="Education-title">Amikom University</h4>
+                              <p>Master's Degree - Informatics Engineering</p>
+                              <h4 class="education-years">2023 - 2026</h4>
+                            </div>
+                          </div>
+
+                        <!-- Education e -->
+                          <div class="education">
+                            <div class="line">
+                              <div></div>
+                            </div>  
+  
+                            <div class="education-info">
+                              <h4 class="Education-title">Harvard University</h4>
+                              <p>Magister's Degree - Informatics Engineering</p>
+                              <h4 class="education-years">2027 - 2029</h4>
+                            </div>
+                          </div>
+
+                    </div>
+
+                    <div class="skills-right">
+                        <P>For 5+ years, I have been continuously learning in the field of front-end and experimenting with new technologies and frameworks, and here you can see a summary of my skills. Field of front-end and experimenting with new technologies</P>
+
+                        <div class="skills-list">
+                            <ul>
+                                <li>C++</li>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <LI>Javascript</LI>
+                                <li>SQL</li>
+                            </ul>
+
+                            <ul>
+                                <li>Python</li>
+                                <li>React JS</li>
+                                <li>Node JS</li>
+                                <li>PHP</li>
+                                <li>C#</li>
+                            </ul>
                         </div>
 
                     </div>
