--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                         </div>
                         <div class="contact-icon-detail">
                             <h4>Address</h4>
-                            <p>Condongcatur, Yogyakarta</p>
+                            <p>Condongcatur, Yogyakarta, Indonesia</p>
                         </div>
                    </div>
                 </div>
