--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                             <p>Condongcatur, Yogyakarta, Indonesia</p>
                         </div>
                    </div>
-
+<!-- ini copas -->
                    <div class="contact-item">
                     <div class="contact-item-icon">
                       <svg
@@ -329,7 +329,7 @@
                       <p>(501) 414-1541</p>
                     </div>
                   </div>
-
+<!-- copas -->
                 </div>
             </div>
         </section>
