--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             </div>
         </section>
 
-        <!-- contact -->
+        <!-- contact address -->
         <section id="contact">
             <div class="contact main-container">
                 <div class="contact-left">
@@ -294,6 +294,15 @@
                         </div>
                         <div>
                             <textarea name="message" id="message" cols="30" rows="30"></textarea>
+                        </div>
+                        <div>
+                            <textarea
+                            name="message"
+                            id="message"
+                            placeholder="message"
+                            cols="30"
+                            rows="10"
+                            ></textarea>
                         </div>
                         <div>
                             <button class="btn-submit">Send message</button>
@@ -310,26 +319,28 @@
                             <p>Condongcatur, Yogyakarta, Indonesia</p>
                         </div>
                    </div>
-<!-- ini copas -->
+        <!-- no contact -->
                    <div class="contact-item">
                     <div class="contact-item-icon">
-                      <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="22"
-                        height="22"
-                        viewBox="0 0 24 24"
-                      >
-                        <path
-                          d="M20 22.621l-3.521-6.795c-.008.004-1.974.97-2.064 1.011-2.24 1.086-6.799-7.82-4.609-8.994l2.083-1.026-3.493-6.817-2.106 1.039c-7.202 3.755 4.233 25.982 11.6 22.615.121-.055 2.102-1.029 2.11-1.033z"
-                        />
-                      </svg>
+                      <svg xmlns="http://www.w3.org/2000/svg"width="22"height="22"viewBox="0 0 24 24"><path d="M20 22.621l-3.521-6.795c-.008.004-1.974.97-2.064 1.011-2.24 1.086-6.799-7.82-4.609-8.994l2.083-1.026-3.493-6.817-2.106 1.039c-7.202 3.755 4.233 25.982 11.6 22.615.121-.055 2.102-1.029 2.11-1.033z"/></svg>
                     </div>
                     <div class="contact-item-detail">
                       <h4>Phone</h4>
-                      <p>(501) 414-1541</p>
+                      <p>(+62)897-8219-364</p>
                     </div>
                   </div>
-<!-- copas -->
+
+                  <!-- Email contact -->
+                  <div class="contact-item">
+                    <div class="contact-item-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 3v18h24v-18h-24zm21.518 2l-9.518 7.713-9.518-7.713h19.036zm-19.518 14v-11.817l10 8.104 10-8.104v11.817h-20z"/></svg>
+                    </div>
+                    <div class="contact-item-detail">
+                      <h4>Email</h4>
+                      <p>bagusputrawiratama24@gmail.com</p>
+                    </div>
+                  </div>
+
                 </div>
             </div>
         </section>
