--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             <li><a href="#services">Services</a></li>
                             <li><a href="#portofolios">Portfolio</a></li>
                             <li><a href="#skills">Skill</a></li>
-                            <li><a href="#Contacts">Contact</a></li>
+                            <li><a href="#contact">Contact</a></li>
                             <li>
                                 <a href="/Resume.pdf" target="_blank">
                                     <button class="btn">Resume</button>
