--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         <section id="portofolios">
             <div class="portofolios main-container">
-                <h3 class="pre-title">MY works</h3>
+                <h3 class="pre-title">MY Works</h3>
                 <h1 class="section-title">Featured portofolios</h1>
 
                 <div class="grid-3">
